src/objects/Case_BU__c.object
<CustomObject>
    <description>R5 - User who has read and edit access to a case will be able to create a Case Business Unit Detail record related to that Case using the related list &quot;Case Business Unit Details&quot; on the Case page. User will be able to create multiple Case Business Unit detail record per case only if all those records are created for a unique BU Specific recordtype. If a user tries to create a Case Business Unit detail record for the same recordtype the system will display an error message.</description>
    <fields>
        <fullName>ABB_3rdParty_Contractor__c</fullName>
        <inlineHelpText>Partner</inlineHelpText>
        <label>ABB 3rd Party Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_Engineers_travelcosts__c</fullName>
        <description>Presenting local or PU engineer travel costs</description>
        <inlineHelpText>This is the estimated Field travel costs for ABB personnel when working on the field(non project related)</inlineHelpText>
        <label>ABB Engineers travel costs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABB_or_External_Partner_Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Partner</inlineHelpText>
        <label>ABB or External Partner Company Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected External partner is not of type &quot;Channel Partner&quot;. Kindly select a &quot;Channel partner&quot; account.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Case_Business_Unit_Specific_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AC_DC_application__c</fullName>
        <description>Specify AC/DC application</description>
        <inlineHelpText>Check if the application is AC or DC</inlineHelpText>
        <label>AC/DC application</label>
        <picklist>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AFD_SN__c</fullName>
        <description>Arc Fault Detector Serial# - Required for UL</description>
        <label>AFD SN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_2nd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account from SFDC</description>
        <inlineHelpText>Partner involved in solving the case. Partner can provide Workshop repair, technical support, Field Service etc.</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Case_Business_Unit_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Number__c</fullName>
        <description>Acknowledgement Number</description>
        <inlineHelpText>Order acknowledgement number confirmation</inlineHelpText>
        <label>Acknowledgement Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Number_item__c</fullName>
        <inlineHelpText>Order acknowledgement position confirmation</inlineHelpText>
        <label>Acknowledgement Number - item</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_taken__c</fullName>
        <label>Action taken</label>
        <picklist>
            <picklistValues>
                <fullName>Deferred to Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replaced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reset</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>After_Sales_ClaimReference__c</fullName>
        <description>This is in use in the transient time when still we keep other systems in the PUs.</description>
        <label>After Sales Claim Reference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Type of application on which the drive is used.used. Eg. Extruder</description>
        <inlineHelpText>Describes the application of the product based on the product application family.</inlineHelpText>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>AP.301 Automatic Gate, Beam, Barrier or Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.302 Cable Car - Ski Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.303 Calander Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.304 Centrifuge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.305 Coating Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.306 Compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.307 Conveyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.308 Crusher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.309 Cutting, Shear, Saw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.310 Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.311 Drum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.313 Elevator or Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.314 Extruder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.315 Fan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.316 Flat Rolling Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.317 Grinding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.318 Household Machinery or Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.319 Hydro Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.320 Induction Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.321 Kiln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.322 Machine Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.323 Mixer, Stirrer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.324 Packaging Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.325 Paper Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.326 Partner/Distributor Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.327 Power Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.328 Processing Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.329 Profile Rolling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.330 Propulsion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP.331 Pump</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <description>Case number for software bugs in separate system</description>
        <label>Bug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIC__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used to denote time spent by department - used for billing to Mfg.</inlineHelpText>
        <label>CIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <inlineHelpText>Defines available fields, products &amp; error codes for a case</inlineHelpText>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Password</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arc Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arc Fault Escalation – Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual/Documentation Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro/CDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proactive Service Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String Inverter – General Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trio – General Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ultra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind – General Troubleshooting</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Master-Detail Relationship to case object</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category_of_Event__c</fullName>
        <inlineHelpText>Selection from this list as designated by NERC Category of Event</inlineHelpText>
        <label>Category of Event</label>
        <picklist>
            <picklistValues>
                <fullName>Alarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced Outage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule outage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transient disturbance</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cause__c</fullName>
        <description>Defect Type related to fault code</description>
        <inlineHelpText>Identify &apos;root cause&apos;</inlineHelpText>
        <label>Cause</label>
        <picklist>
            <picklistValues>
                <fullName>3rd party hardware flaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Software Flaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken/Damaged/Wrong Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cause of Problem Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration / Software Installation error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrupted file or database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Date Unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Insufficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Request or Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DriveHelp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eLearning Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Interaction</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Central_Stock__c</fullName>
        <inlineHelpText>Needed to handle the IECLVM and Baldor warranties as CS are doing modifications and may be the liable party for the case.</inlineHelpText>
        <label>Central Stock</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claim_Value__c</fullName>
        <description>Claimed Units total TP value</description>
        <inlineHelpText>&quot;Installed base value: estimated replacement value of the goods
Needed for Replace / Repair decision.&quot;</inlineHelpText>
        <label>Claim Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claimed_product_quantity__c</fullName>
        <description>Claimed product quantity</description>
        <inlineHelpText>Quantity of products for what the customer is asking to raise a case</inlineHelpText>
        <label>Claimed product quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_beforeEvent_ActivePower__c</fullName>
        <inlineHelpText>How much Active Power from Site before the Event?</inlineHelpText>
        <label>Active Power (MW)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_beforeEvent_Power__c</fullName>
        <inlineHelpText>What Operation mode on Site before the Event?</inlineHelpText>
        <label>Power Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_beforeEvent_QIP__c</fullName>
        <inlineHelpText>How much Reactive Power from Interconnection Point before the Event?</inlineHelpText>
        <label>Q Interconnection Point (MVAr)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_beforeEvent_QSite__c</fullName>
        <inlineHelpText>How much Reactive Power from Site before the Event?</inlineHelpText>
        <label>Q Site (MVAr)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_before_Event_Operation__c</fullName>
        <inlineHelpText>What Operation mode on Site before the Event?</inlineHelpText>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confidential_Information__c</fullName>
        <description>Only to regional service center Tier 2.5 info from Tier 3.</description>
        <label>Confidential Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2nd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact linked with 2nd Account from SFDC</description>
        <inlineHelpText>Receiver of goods, contact on site or  Partner contact involved in solving the case</inlineHelpText>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Case_Business_Unit_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Project__c</fullName>
        <inlineHelpText>Project or Contract Number in case project or contract not available in system</inlineHelpText>
        <label>Contract/Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correction_promisedin__c</fullName>
        <inlineHelpText>This is the ID of the Technical Correction that is promised to resolve the case.</inlineHelpText>
        <label>Correction promised in</label>
        <picklist>
            <picklistValues>
                <fullName>1.3/1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0 RU1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Rev A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Rev B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0 SP1 RU3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0 SP2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0 SP2 Rev. A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0 SP2 Rev. B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0 SP2 Rev. C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0 SP2 Rev. D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0 SP2 Rev. E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1.1-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 FP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 FP4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Rev.A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Rev.B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Rev.C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Rev.D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 RU2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned for correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR6.0 SP2 TC2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV4.1 Rev L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV4.1 Rev M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV4.1 RU10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV 5.0 SP1 RU5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV 5.1 6.0</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cos_phi_Power_factor__c</fullName>
        <description>Specify cos phi (Power factor)</description>
        <inlineHelpText>Plant power factor</inlineHelpText>
        <label>Cos phi (Power factor)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <inlineHelpText>Overall Warranty Cost, this field is total &apos;cost&apos; collected for solving and handling the case</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Invoice_to_Customer__c</fullName>
        <inlineHelpText>ABB issue credit not to customer as resolution to the warranty request. For example instead of sending a new product.</inlineHelpText>
        <label>Credit Note Invoice to Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <inlineHelpText>Customer Channel type, denotes Business customer or homeowner</inlineHelpText>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>End user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_acceptance__c</fullName>
        <description>Depending on accept/reject YES/NO</description>
        <inlineHelpText>Customer approval for ABB product /project / Services</inlineHelpText>
        <label>Customer acceptance</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Returned__c</fullName>
        <description>Date faulty unit was returned on RMA</description>
        <inlineHelpText>Date faulty unit is returned to factory</inlineHelpText>
        <label>Date Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Scheduled__c</fullName>
        <description>What is the scheduled date for this ABB site visit</description>
        <inlineHelpText>Date replacement unit shipped to customer</inlineHelpText>
        <label>Date Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_shipped__c</fullName>
        <description>Date unit shipped out on RMA</description>
        <label>Date shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DefectFunction_Sub_type__c</fullName>
        <description>Unique BU table, selection depending on error code</description>
        <inlineHelpText>Customer description of the product issue when case is created</inlineHelpText>
        <label>Defect Function / Sub type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer induced error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAT failure (at ABB factory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misapplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project scope creep,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Scope incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety  concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAT failure (at customer location)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Documentation incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Documentation missing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Date__c</fullName>
        <description>States when product was first reported to be defective</description>
        <inlineHelpText>Date when the product was found or reported to be defective.</inlineHelpText>
        <label>Defect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_address__c</fullName>
        <inlineHelpText>Necessary for &apos;delivery&apos; of services or parts; may be same as Contact site location</inlineHelpText>
        <label>Delivery address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_ofother_Actiontaken__c</fullName>
        <inlineHelpText>This is &apos;free text&apos; field for adding list of Actions taken as a diary</inlineHelpText>
        <label>Description of other/Action taken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_ofother_Producttype__c</fullName>
        <inlineHelpText>What product is Faulty?</inlineHelpText>
        <label>Description of other/Product type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_ofother_SubSystem__c</fullName>
        <inlineHelpText>Description of Others</inlineHelpText>
        <label>Description of other/Sub System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_ofother_failure__c</fullName>
        <inlineHelpText>Description of Others</inlineHelpText>
        <label>Description of other/failure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_ofother_faultycomponent__c</fullName>
        <inlineHelpText>Description of Others</inlineHelpText>
        <label>Description of other/faulty component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disturbance_Outage_Time__c</fullName>
        <label>Disturbance/Outage Time (hrs)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disturbance_Outage_start_duration__c</fullName>
        <inlineHelpText>As reported by customer or system alert.</inlineHelpText>
        <label>Disturbance/Outage start duration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disturbance_Outage_stop_duration__c</fullName>
        <inlineHelpText>Associated with Service visit, contract time to install/commission, etc.</inlineHelpText>
        <label>Disturbance/Outage stop duration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Drive_Ambient_Temperature__c</fullName>
        <inlineHelpText>Ambient temp where the drive is located</inlineHelpText>
        <label>Drive Ambient Temperature</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duty_Type__c</fullName>
        <description>Drive duty type based on application such as Pump and fan, conveyor, paper machine etc...</description>
        <inlineHelpText>Drive duty type based on application such as Pump and fan, conveyor, paper machine etc…</inlineHelpText>
        <label>Duty Type</label>
        <picklist>
            <picklistValues>
                <fullName>Heavy duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No overload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal duty</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipName>Case_Business_Unit_Specific_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engineer_traveling_cost__c</fullName>
        <description>Engineer travelling cost including hotel and expenditures</description>
        <inlineHelpText>Cost for travel</inlineHelpText>
        <label>Engineer travelling cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Environment_location__c</fullName>
        <inlineHelpText>Site location and Ambient condition where product(s) are  installed when case is created.</inlineHelpText>
        <label>Environment location</label>
        <picklist>
            <picklistValues>
                <fullName>Agressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Code_Comments__c</fullName>
        <description>Additional details on error code/failure mode</description>
        <inlineHelpText>Comments regarding failure</inlineHelpText>
        <label>Error Code Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>